--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/shellmessage.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/shellmessage.scss
@@ -78,9 +78,9 @@
 }
 
 .btn-shell .badge-icon {
-  position:absolute;
-  top:29px;
-  left:24px;
+  position: absolute;
+  top: 32px;
+  left: 36px;
 }
 
 }
